Refactor: PlannerService uses TargetResolutionService (Week 1 Task 3)
- Extracted target resolution logic to TargetResolutionService
- Refactored PlannerService to depend on TargetResolutionService
- Updated PlannerService tests to use new service and fix strict stubbing
- Fixed compilation errors in Controller tests
- Included DtoMapper and CatalogIndex from previous tasks